--- a/views/device.ejs
+++ b/views/device.ejs
@@ -1,47 +1,281 @@
-This is so you can add a fucken Devices to the rooms
-  <form action="/x/deviceadd" method="post">
-    Device name :<br>
-    <input type="text" name="name" value=""><br>
-    Device image:<br>
-    <input type="text" name="image" value=""><br>
-    Device Watts:<br>
-    <input type="text" name="watts" value=""><br>
-    Device switch?LOL:<br>
-    <input type="text" name="trigger" value=""><br>
-    <input type="hidden" name="id" value="<%=id%>" >
-    <input type="hidden" name="room" value="<%=room%>" >
-
-    <input type="submit" value="Submit">
-	</form> 
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+"http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+    <title>Devices</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="NRG Site" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=9">
+    <link rel="shortcut icon" href="images/NRGLogo.png" />
 
 
-<br><br><br><br><br>
-bellow is the view for all the rooms for this fucker.
-<br><br><br><br>
+
+    <!-- NRG CSS---->
+    <link rel="stylesheet" type="text/css" href="styles/new-home.css">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <link rel="stylesheet" type="text/css" href="styles/slick.css">
+    <link rel="stylesheet" type="text/css" href="styles/owl-carousel.css">
+    <link rel="stylesheet" type="text/css" href="styles/theme-carousel.css">
+    <link rel="stylesheet" type="text/css" href="styles/transition-carousel.css">
+    <link rel="stylesheet" type="text/css" href="styles/appViews.css">
+
+
+    <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+
+    <script src="js/homepageJs/modernizr.js"></script>
+
+    <script type="text/javascript" src="//use.typekit.net/khi6tzf.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+
+</head>
+<body background="images/loginBack.jpg" class="new-home">
+<!---replace <div id="header" with this <header> and everything inside-->
+<header>
+    <div class="container" >
+        <div class="row">
+            <div class="col-md-12">
+                <div class="header-wrapper">
+                    <div class="logo">
+                        <a href="/site/es.html">
+                            <img src="images/logo.png" alt="Logo" /> </a>
+                    </div><div class="right-wrapper">
+                        <div class="top-menu">
+                            <ul>
+                                <li class="submenu-switch"><a style="color:white;" href='/x/logout'>Log Out</a>
+                                </li>
+                                <li class="submenu-switch"><a style="color:white;" href="login.html">Register</a>
+                                </li>
+                            </ul>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+<!-- end of header--->
 
 <% if (req.session.devices.length > 0) { %>
 
-    <% _.each(req.session.devices, function (corndog) { %>
-    <br>
-    <li>the Name : <%= corndog.name %></li>
-    <li>the Ownwer : <%= corndog.owner %></li>
-    <li>the House : <%= corndog.room %></li>
-    <li>the Name : <%= corndog.house %></li>
-    <li>the Ownwer : <%= corndog.room %></li>
-    <li>the House : <%= corndog.image %></li>
-    <li>the Name : <%= corndog.watts %></li>
-    <li>the Ownwer : <%= corndog.trigger %></li>
-    <li>crated at : <%= corndog.createdAt %></li>
-    <li>updated at: <%= corndog.updatedAt %></li>
-    <a href="/x/devicedelete?name=<%= corndog.name %>&id=<%=id%>&room=<%= corndog.room %>">Destroy</a>
+<section class="slider">
+    <div class="container">
+        <div class="addRooms">
+            <h2>Add House</h2>
+            <form action="/x/deviceadd" method="post">
+                <div class="field">
+                    <input type="text" id="fieldUser" name="name" class="input" required pattern=.*\S.* />
+                    <label for="fieldUser" class="label">Device Name</label>
+                </div>
+                <div class="field">
+                    <!--<input type="text" id="fieldPassword"  name="image" class="input" required pattern=.*\S.* />-->
+                    <!--<label for="fieldPassword" class="label">House Image</label>-->
 
-    <br>
-    -----------------------------------------
-    <% }) %>
+                    <select name="image" class="input">
+                        <option value="/images/GivenDevices/Coffee Maker.png">Coffee Maker</option>
+                        <option value="/images/GivenDevices/Laptop.png">Laptop</option>
+                        <option value="/images/GivenDevices/Light Bulb.png">Light Bulb</option>
+                        <option value="/images/GivenDevices/Microwave.png">Microwave</option>
+                        <option value="/images/GivenDevices/PC.png">PC</option>
+                        <option value="/images/GivenDevices/Phone Charger.png">Phone Charger</option>
+                        <option value="/images/GivenDevices/Refrigerator.png">Refrigerator</option>
+                    </select>
+                </div>
+                <div class="field">
+                    <input type="text" id="fieldUser" name="watts" class="input" required pattern=.*\S.* />
+                    <label for="fieldUser" class="label">Watts</label>
+                    <input type="hidden" name="id" value="<%=id%>" >
+                    <input type="hidden" name="room" value="<%=room%>" >
+                </div>
+                <div class="btn btn-primary">
+                    <input type="submit" name="Submit" style="background: transparent;">
+                </div>
+            </form>
+        </div>
+        <div class="my-slider">
+            <div class="prev-nav"></div>
+            <div class="next-nav"></div>
+            <div class="main-slider ">
+                <% _.each(req.session.devices, function (corndog) { %>
 
+                <div class="slide-item" >
+                    <img src=""  alt="Slider Saul" style="background: transparent"/>
+
+                    <div class="item-caption">
+                        <div id="myImage">
+                            <img src="<%= corndog.image %>" alt="SliderItem" />
+                        </div>
+
+                        <h2><%= corndog.name %></h2>
+                        <p style="font-size: 30px;">Owner:<%= corndog.watts %></p>
+                        <a href="/x/devicedelete?name=<%= corndog.name %>&id=<%=id%>&room=<%= corndog.room %>">Destroy</a>
+
+
+                    </div>
+                </div>
+                <% }) %>
+            </div>
+        </div>
+    </div>
+</section>
 
 <% } else { %>
 
-You have no houses you freake deadbeat!!!!
+<section>
+<div class="container">
 
+        <h2>Add Device</h2>
+        <form action="/x/deviceadd" method="post">
+            <div class="field">
+                <input type="text" id="fieldUser" name="name" class="input" required pattern=.*\S.* />
+                <label for="fieldUser" class="label">Device Name</label>
+            </div>
+            <div class="field">
+                <!--<input type="text" id="fieldPassword"  name="image" class="input" required pattern=.*\S.* />-->
+                <!--<label for="fieldPassword" class="label">House Image</label>-->
+
+                <select name="image" class="input">
+                    <option value="/images/GivenDevices/Coffee Maker.png">Coffee Maker</option>
+                    <option value="/images/GivenDevices/Laptop.png">Laptop</option>
+                    <option value="/images/GivenDevices/Light Bulb.png">Light Bulb</option>
+                    <option value="/images/GivenDevices/Microwave.png">Microwave</option>
+                    <option value="/images/GivenDevices/PC.png">PC</option>
+                    <option value="/images/GivenDevices/Phone Charger.png">Phone Charger</option>
+                    <option value="/images/GivenDevices/Refrigerator.png">Refrigerator</option>
+                </select>
+            </div>
+            <div class="field">
+                <input type="text" id="fieldUser" name="watts" class="input" required pattern=.*\S.* />
+                <label for="fieldUser" class="label">Watts</label>
+            </div>
+            <div class="btn btn-primary">
+                <input type="submit" name="Submit" style="background: transparent;">
+            </div>
+        </form>
+</div>
+</section>
 <% } %>
+
+
+
+
+<!---replace <div id="footer" with this <footer> and everything inside, dont forget to change replace new-home.css-->
+<footer>
+    <div class="container">
+        <div class="row " style="width:100%; padding-left:200px">
+            <div class="col-md-8 col-sm-12 footer-left">
+                <div class="row">
+                    <div class="col-md-4 col-sm-4 col-xs-12">
+                        <div class="footer-col">
+                            <div class="list-title" data-toggleable>
+                                <h4>Lorem ipsum dolor sit amet</h4> </div>
+                            <div class="list-content">
+                                <ul class="footer-list">
+                                    <li>
+                                        <a href="/site/es/mundo-saul/campanas.html">Campañas</a>
+                                    </li><li>
+                                        <a href="/site/es/mundo-saul/eventos-saul.html">Eventos</a>
+                                    </li><li>
+                                        <a href="/site/es/mundo-saul/galardones.html">Prensa y galardones</a>
+                                    </li><li>
+                                        <a href="/site/es/mundo-saul/marcas-exclusivas.html">Marcas Exclusivas</a>
+                                    </li><li>
+                                        <a href="/site/es/mundo-saul/ubicaciones.html">Ubicaciones</a>
+                                    </li></ul>
+                            </div>
+                        </div>
+                    </div><div class="col-md-4 col-sm-4 col-xs-12">
+                        <div class="footer-col">
+                            <div class="list-title" data-toggleable>
+                                <h4>Lorem ipsum dolor sit amet</h4> </div>
+                            <div class="list-content">
+                                <ul class="footer-list">
+                                    <li>
+                                        <a href="/site/es/quienes-somos.html">Historia</a>
+                                    </li><li>
+                                        <a href="/site/es/quienes-somos/Valores.html">Valores</a>
+                                    </li><li>
+                                        <a href="/site/es/quienes-somos/proyectos-sociales.html">Proyectos Sociales</a>
+                                    </li><li>
+                                        <a href="/site/es/quienes-somos/manifiesto.html">Manifiesto</a>
+                                    </li><li>
+                                        <a href="/site/es/quienes-somos/faq.html">Preguntas frecuentes</a>
+                                    </li></ul>
+                            </div>
+                        </div>
+                    </div><div class="col-md-4 col-sm-4 col-xs-12">
+                        <div class="footer-col">
+                            <div class="list-title" data-toggleable>
+                                <h4>Lorem ipsum dolor sit amet</h4> </div>
+                            <div class="list-content">
+                                <ul class="footer-list">
+                                    <li>
+                                        <a href="/site/es/contacto/contacto-empleos-y-modelos.html">Empleo, Pasantías, Casting de modelos</a>
+                                    </li><li>
+                                        <a href="/site/es/contacto.html">Contáctanos</a>
+                                    </li></ul>
+                            </div>
+                        </div>
+                    </div></div>
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col-md-6 col-sm-12 col-xs-12">
+                <div class="copyright">
+                    <ul>
+                        <li>© 2016 NRG | All rights reserved</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+<!--end of footer-->
+
+<!--[if lt IE 7]>
+<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+<![endif]-->
+<!--<script src="scripts/jquery.js" type="javascript"></script>-->
+<!--<script src="scripts/owl.carousel.min.js"></script>-->
+<!--<script src="scripts/jquery.dotdotdot.min.js"></script>-->
+<!--<script src="scripts/jquery.validate.js"></script>-->
+
+<script src="js/homepageJs/jquery.bookblock.js"></script>
+<script src="js/homepageJs/main.js"></script>
+<script src="js/homepageJs/jquery-2.0.0.min.js"></script>
+<script src="js/homepageJs/jquery-migrate-1.1.1.min.js"></script>
+
+<!--<script src="scripts/affix.js"></script>-->
+<!--<script src="scripts/alert.js"></script>-->
+<!--<script src="scripts/dropdown.js"></script>-->
+<script src="js/homepageJs/tooltip.js"></script>
+<!--<script src="scripts/modal.js"></script>-->
+<script src="js/homepageJs/transition.js"></script>
+<script src="js/homepageJs/button.js"></script>
+<script src="js/homepageJs/popover.js"></script>
+<script src="js/homepageJs/carousel.js"></script>
+<script src="js/homepageJs/scrollspy.js"></script>
+
+<!-- Added for changes specified in Saul Home Page -->
+<script src="js/homepageJs/slick.min.js"></script>
+<script src="js/homepageJs/new-home.js"></script>
+
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+    <div style="display:inline;">
+        <img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/977013232/?value=0&amp;guid=ON&amp;script=0"/>
+    </div>
+</noscript>
+<!--===================GOOGLE REMARKETING CODE END===========================--><script src="//platform.twitter.com/oct.js" type="text/javascript"></script>
+<script type="text/javascript">twttr.conversion.trackPid('ntv0z', { tw_sale_amount: 0, tw_order_quantity: 0 });</script>
+
+
+
+</body>
+</html>
